--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 title: Ahmed Ali
 email: byahmedali@gmail.com
+tagline: Building Intelligent Data-Driven Solutions
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+  Ahmed Ali is an AI and Data Science professional with expertise in Microsoft Azure, Python, and Power BI.
+  This portfolio showcases his hands-on projects, research publications, and training work in applied AI,
+  machine learning, and data analytics. Explore how Ahmed builds intelligent, data-driven solutions to
+  real-world challenges using modern cloud technologies.
+linkedin_username: byahmedali
+github_username: byahmedali
+minimal_mistakes_skin: air
 search: true
 
 # Build settings
@@ -60,36 +62,31 @@ plugins:
 author:
   name   : "Ahmed Ali"
   avatar : "/assets/images/picture.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "AI & Data Science Practitioner."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://byahmedali.github.io/"
-    - label: "LinkedIn"
-      icon: "fa-brands fa-linkedin"
-      url: "https://www.linkedin.com/in/ahmedalii/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/byahmedali"
-    - label: "Google Scholar"
-      icon: "fa-brands fa-google-scholar"
-      url: "https://scholar.google.com/citations?user=YSRvNhoAAAAJ&hl"
+  - label: "LinkedIn"
+    icon: "fa-brands fa-linkedin"
+    url: "https://www.linkedin.com/in/byahmedali/"
+  - label: "GitHub"
+    icon: "fa-brands fa-github"
+    url: "https://github.com/byahmedali"
+  - label: "Google Scholar"
+    icon: "fa-brands fa-google"
+    url: "https://scholar.google.com/citations?user=YSRvNhoAAAAJ&hl"
+
 
 footer:
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://byahmedali.github.io/"
-    - label: "LinkedIn"
-      icon: "fa-brands fa-linkedin"
-      url: "https://www.linkedin.com/in/ahmedalii/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/byahmedali"
-    - label: "Google Scholar"
-      icon: "fa-brands fa-google-scholar"
-      url: "https://scholar.google.com/citations?user=YSRvNhoAAAAJ&hl"
-
+  - label: "LinkedIn"
+    icon: "fa-brands fa-linkedin"
+    url: "https://www.linkedin.com/in/byahmedali/"
+  - label: "GitHub"
+    icon: "fa-brands fa-github"
+    url: "https://github.com/byahmedali"
+  - label: "Google Scholar"
+    icon: "fa-brands fa-google"
+    url: "https://scholar.google.com/citations?user=YSRvNhoAAAAJ&hl"
+    
 defaults:
   # _posts
   - scope:
