--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Ahmed Ali's Personal Website
+title: Ahmed Ali
 email: byahmedali@gmail.com
 tagline: Building Intelligent Data-Driven Solutions
 description: >- # this means to ignore newlines until "baseurl:"
@@ -73,6 +73,9 @@ author:
   - label: "Google Scholar"
     icon: "fa-brands fa-google-scholar"
     url: "https://scholar.google.com/citations?user=YSRvNhoAAAAJ&hl"
+  - label: "Email"
+    icon: "fa-solid fa-envelope"
+    url: "mailto:byahmedali@gmail.com"
 
 
 footer:
@@ -86,6 +89,10 @@ footer:
   - label: "Google Scholar"
     icon: "fa-brands fa-google-scholar"
     url: "https://scholar.google.com/citations?user=YSRvNhoAAAAJ&hl"
+  - label: "Email"
+    icon: "fa-solid fa-envelope"
+    url: "mailto:byahmedali@gmail.com"
+
 
 defaults:
   # _posts
