--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,9 @@ author:
   - label: "Email"
     icon: "fa-solid fa-envelope"
     url: "mailto:byahmedali@gmail.com"
+  - label: "Instagram"
+    icon: "fa-brands fa-instagram"
+    url: "https://www.instagram.com/byahmedali/"
 
 
 footer:
@@ -92,6 +95,9 @@ footer:
   - label: "Email"
     icon: "fa-solid fa-envelope"
     url: "mailto:byahmedali@gmail.com"
+  - label: "Instagram"
+    icon: "fa-brands fa-instagram"
+    url: "https://www.instagram.com/byahmedali/"
 
 
 defaults:
