--- a/_config.yml
+++ b/_config.yml
@@ -86,11 +86,7 @@ plugins:
 author:
   name   : "Ahmed Ali"
   avatar : "/assets/images/profile.jpg"
-  bio    : |
-    AI & Data Science Professional,
-    Microsoft Certified: Azure Data Scientist & Administrator,
-    Power BI Data Analyst & Trainer,
-    Traveler & Photographer.
+  bio    : "AI & Data Science Professional | Microsoft Certified Azure Data Scientist & Administrator | Power BI Data Analyst & Trainer | Traveler & Photographer"
   links:
   - label: "LinkedIn"
     icon: "fa-brands fa-linkedin" 
