--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
     icon: "fa-solid fa-envelope"
     url: "mailto:byahmedali@gmail.com"
   - label: "Instagram"
-    icon: "fa-brands fa-square-instagram"
+    icon: "fa-brands fa-instagram"
     url: "https://www.instagram.com/byahmedali/"
 
 
