--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: "Ahmed Ali is an AI and Data Science professional with expertise in
   This portfolio showcases his hands-on projects, research publications, and training work in applied AI,
   machine learning, and data analytics. Explore how Ahmed builds intelligent, data-driven solutions to
   real-world challenges using modern cloud technologies."
+image: "/assets/images/preview.png"
 url: "https://byahmedali.github.io"
 linkedin_username: "byahmedali"
 github_username: "byahmedali"
