--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ plugins:
 author:
   name   : "Ahmed Ali"
   avatar : "/assets/images/profile.jpg"
-  bio    : "AI & Data Science Professional • Microsoft Certified: Azure Data Scientist & Administrator • Power BI Data Analyst & Trainer • Traveler & Photographer"
+  bio    : "AI & Data Science Professional • Microsoft Certified: Azure Data Scientist & Administrator • Power BI Data Analyst & Trainer"
   links:
   - label: "LinkedIn"
     icon: "fa-brands fa-linkedin" 
@@ -92,9 +92,9 @@ author:
   - label: "Email"
     icon: "fa-solid fa-envelope"
     url: "mailto:byahmedali@gmail.com"
-  - label: "Instagram"
-    icon: "fa-brands fa-instagram"
-    url: "https://www.instagram.com/byahmedali/"
+  #- label: "Instagram"
+  #  icon: "fa-brands fa-instagram"
+  #  url: "https://www.instagram.com/byahmedali/"
 
 
 footer:
@@ -111,9 +111,9 @@ footer:
   - label: "Email"
     icon: "fa-solid fa-envelope"
     url: "mailto:byahmedali@gmail.com"
-  - label: "Instagram"
-    icon: "fa-brands fa-instagram"
-    url: "https://www.instagram.com/byahmedali/"
+ # - label: "Instagram"
+ #   icon: "fa-brands fa-instagram"
+ #   url: "https://www.instagram.com/byahmedali/"
 
 
 defaults:
