--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: ""
 email: "byahmedali@gmail.com"
 tagline: "Building Intelligent Data-Driven Solutions"
-description: "Ahmed Ali is an AI and Data Science professional with expertise in Microsoft Azure, Python, and Power BI.
-  This portfolio showcases his hands-on projects, research publications, and training work in applied AI,
-  machine learning, and data analytics. Explore how Ahmed builds intelligent, data-driven solutions to
+description: "Ahmed Ali is an AI and Data Science practitioner with expertise in Microsoft Azure, Python, and Power BI.
+  This portfolio showcases his hands-on projects, research publications, and training work in AI,
+  machine learning, and data analytics. Explore how Ahmed builds intelligent, data-driven solutions to solve
   real-world challenges."
 teaser: "/assets/images/preview.png" 
 url: "https://byahmedali.github.io"
