--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
     url: /projects/
   - title: "Publications"
     url: /publications/
-  #- title: "Activities"
-  #  url: /activities/
+  - title: "Activities"
+    url: /activities/
