--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: ""
+
 email: "byahmedali@gmail.com"
 tagline: "Building Intelligent Data-Driven Solutions"
 description: "Ahmed Ali is an AI and Data Science practitioner with expertise in Microsoft Azure, Python, and Power BI.
@@ -32,6 +32,7 @@ locale: "en-US"
 timezone: Asia/Karachi
 repository: "byahmedali/byahmedali.github.io"
 logo: "/assets/images/byahmedaliteal.png"
+title: "Ahmed Ali"
 
 sass:
   sass_dir: _sass
